playing around with images/icons, changing item texts

--- a/FoodSaver.iOS/FoodSaver.iOS.csproj
+++ b/FoodSaver.iOS/FoodSaver.iOS.csproj
@@ -142,4 +142,10 @@
       <Name>FoodSaver</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\pikachu.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\fridge.png" />
+  </ItemGroup>
 </Project>
