--- a/FoodSaver.Android/FoodSaver.Android.csproj
+++ b/FoodSaver.Android/FoodSaver.Android.csproj
@@ -125,5 +125,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\settings.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\BreakfastMeal.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
