--- a/FoodSaver.Android/FoodSaver.Android.csproj
+++ b/FoodSaver.Android/FoodSaver.Android.csproj
@@ -150,9 +150,6 @@
     <AndroidResource Include="Resources\drawable\UNFoodGoals.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\foodSAVER.png" />
-  </ItemGroup>
-  <ItemGroup>
     <AndroidResource Include="Resources\drawable\title.png" />
   </ItemGroup>
   <ItemGroup>
@@ -161,8 +158,7 @@
   <ItemGroup>
     <AndroidResource Include="Resources\mipmap-hdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\drawable\logo36.png" />
-  </ItemGroup>
+	<AndroidResource Include="Resources\drawable\logo36.png" />
+	<AndroidResource Include="Resources\drawable\FoodSaverLanding.png" />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
