finished notification functionality. Added popup alert after login to show items expiring in next 2 days. Updated titles/landing page

--- a/FoodSaver.Android/FoodSaver.Android.csproj
+++ b/FoodSaver.Android/FoodSaver.Android.csproj
@@ -158,6 +158,14 @@
   <ItemGroup>
     <AndroidResource Include="Resources\mipmap-hdpi\launcher_foreground.png" />
   </ItemGroup>
-	<AndroidResource Include="Resources\drawable\FoodSaverLanding.png" />
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\FoodSaverLanding.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\logoTitle.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
